feat: Reintroduce Spring Security and configure for JWT-based stateless authentication